# PhysNet-RadarNowcast

./: .gitignore  .~lock.IS ppt1.pptx#  04-radar-nowcasting.py  2d-advection-deepxde.ipynb  2d-advection.ipynb  2d-diffussion.ipynb  2dADV-RADAR.ipynb  2d_adv_test.ipynb  IS ppt1.pptx  LICENSE  README.md  convLSTM _physics1.ipynb  convLSTM _physics2.ipynb  convLSTM.ipynb  pyproject.toml
2d-advection/pinn_plot/: mae_rmse_0000.csv  mae_rmse_0001.csv  mae_rmse_0002.csv  mae_rmse_0003.csv  mae_rmse_0004.csv  mae_rmse_0005.csv  mae_rmse_0006.csv  mae_rmse_0007.csv  mae_rmse_0008.csv  mae_rmse_0009.csv  mae_rmse_0010.csv  mae_rmse_0011.csv  mae_rmse_0012.csv  mae_rmse_0013.csv  mae_rmse_0014.csv  mae_rmse_0015.csv  mae_rmse_0016.csv  mae_rmse_0017.csv  mae_rmse_0018.csv  mae_rmse_0019.csv  mae_rmse_0020.csv  mae_rmse_0021.csv  mae_rmse_0022.csv  mae_rmse_0023.csv  mae_rmse_0024.csv  mae_rmse_0025.csv  mae_rmse_0026.csv  mae_rmse_0027.csv  mae_rmse_0028.csv  mae_rmse_0029.csv  mae_rmse_0030.csv  mae_rmse_0031.csv  mae_rmse_0032.csv  (+24 more)
meeting records/: meeting1.md  meeting2.md  meeting3.md  meeting4.md  meeting5.md  meeting6.md  meeting7.md  meeting8.md  meeting9.md
notebooks/: 2d-advection-deepxde.ipynb  2d-advection.ipynb  2d-continuity.ipynb  2d-diffusion.ipynb  2d-diffussion.ipynb  2dADV-RADAR.ipynb  2d_adv_test.ipynb  convLSTM _physics1.ipynb  convLSTM _physics2.ipynb  convLSTM_Phycell.ipynb  convLSTM_attention_physics.ipynb  convlstm+attention.ipynb  swinLSTM.ipynb  swinlstm2.ipynb
src/: train.py
tests/: synthetic_data_test.ipynb  synthetic_data_test.py
(+17 files in other folders)
