[tool.poetry]
name = "Physics-Informed Radar Nowcasting "
version = "0.1.0"
description = ""
authors = ["Sushen Yadav <swe_sushen@onmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.19"
torch = "^1.7.1"
tensorflow = "^2.4"
matplotlib = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
